--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "files.associations": {
     "*.ejs": "html",
     "plyconfig.json": "jsonc"
-  }
+  },
+  "cSpell.words": ["submitbutton", "surveyform", "Wors"]
 }
